fix: top alignment

--- a/src/components/ColorBlock/color-block.scss
+++ b/src/components/ColorBlock/color-block.scss
@@ -26,6 +26,6 @@
 
 .color-block__color--with-label {
   position: absolute;
-  top: -0.1875rem;
+  top: 0;
   left: 5rem;
 }
